--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -35,15 +35,15 @@
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net47" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net47" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net47" />
-  <package id="Microsoft.AspNetCore.Cryptography.Internal" version="2.0.2" targetFramework="net47" />
-  <package id="Microsoft.AspNetCore.DataProtection" version="2.0.2" targetFramework="net47" />
-  <package id="Microsoft.AspNetCore.DataProtection.Abstractions" version="2.0.2" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Cryptography.Internal" version="2.1.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.DataProtection" version="2.1.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.DataProtection.Abstractions" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.AspNetCore.DataProtection.Extensions" version="2.0.2" targetFramework="net47" />
-  <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="2.0.2" targetFramework="net47" />
-  <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="2.0.2" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="2.1.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.AspNetCore.Html.Abstractions" version="2.1.0" targetFramework="net47" />
-  <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.0.2" targetFramework="net47" />
-  <package id="Microsoft.AspNetCore.Http.Features" version="2.0.2" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.1.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Http.Features" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net47" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net47" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net47" />
@@ -64,15 +64,15 @@
   <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Configuration.Json" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.DependencyInjection" version="2.0.0" targetFramework="net47" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.DependencyModel" version="2.0.3" targetFramework="net47" />
   <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.FileProviders.Physical" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.1.0" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Hosting.Abstractions" version="2.0.2" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.1" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Hosting.Abstractions" version="2.1.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.ObjectPool" version="2.0.0" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Options" version="2.0.1" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Options" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Primitives" version="2.1.0" targetFramework="net47" />
   <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.0" targetFramework="net47" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.3" targetFramework="net47" />
@@ -169,7 +169,8 @@
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net47" />
   <package id="System.Security.Cryptography.ProtectedData" version="4.4.0" targetFramework="net47" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net47" />
-  <package id="System.Security.Cryptography.Xml" version="4.4.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.Xml" version="4.5.0" targetFramework="net47" />
+  <package id="System.Security.Permissions" version="4.5.0" targetFramework="net47" />
   <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net47" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net47" />
   <package id="System.Text.Encoding.CodePages" version="4.3.0" targetFramework="net47" />
