--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
+    "react-yandex-metrika": "^2.3.0",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
@@ -47,7 +48,8 @@
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
-    "whatwg-fetch": "2.0.3"
+    "whatwg-fetch": "2.0.3",
+    "prop-types": "latest"
   },
   "scripts": {
     "start": "node scripts/start.js",
