--- a/src/Web.Api/Web.Api.csproj
+++ b/src/Web.Api/Web.Api.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Serilog.Settings.Configuration" Version="2.4.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="2.5.0" />
     <PackageReference Include="Vostok.Hosting" Version="1.0.0-beta000055" />
     <PackageReference Include="Vostok.Hosting.Core" Version="1.0.0-beta000029" />
     <PackageReference Include="Vostok.Instrumentation.AspNetCore" Version="1.0.0-beta000031" />
