--- a/src/uLearn.Web/uLearn.Web.nuspec
+++ b/src/uLearn.Web/uLearn.Web.nuspec
@@ -15,6 +15,6 @@
     <tags>ulearn education mooc</tags>
   </metadata>
   <files>
-    <file src="static\*" target="" />
+    <file src="static\**\*.*" target="" />
   </files>
 </package>
