--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -108,6 +108,9 @@
     <add key="ulearn.antiplagiarism.enabled" value="true"/>
     <add key="ulearn.antiplagiarism.endpoint" value="http://localhost:33333/api/"/>  
     <add key="ulearn.antiplagiarism.token" value="A21DB9C3-A4B1-4B8D-9ED5-B0DF973FF060"/>
+
+    <!-- Где лежит реактовый index.html -->
+    <add key="ulearn.react.index.html" value="..\Frontend\build\index.html"/>
   </appSettings>   
   <log4net>
     <root>
