--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -8,12 +8,6 @@
     "test": "jest",
     "storybook": "start-storybook -p 9001 -c .storybook"
   },
-  "jest": {
-    "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-      "\\.(css|less)$": "identity-obj-proxy"
-    }
-  },
   "dependencies": {
     "@babel/core": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
@@ -49,7 +43,6 @@
     "outdated-browser-rework": "2.5.4",
     "polyfill-array-includes": "^1.0.0",
     "postcss-flexbugs-fixes": "4.1.0",
-    "postcss-loader": "3.0.0",
     "promise": "8.0.2",
     "promise.prototype.finally": "3.1.0",
     "prop-types": "latest",
@@ -79,10 +72,6 @@
     "webpack-manifest-plugin": "2.0.4",
     "whatwg-fetch": "3.0.0"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "proxy": "https://localhost:44300",
   "devDependencies": {
     "@babel/preset-env": "^7.1.0",
     "@storybook/addon-actions": "^4.1.11",
@@ -98,6 +87,18 @@
     "mini-css-extract-plugin": "^0.4.3",
     "moment": "^2.22.2",
     "moment-timezone": "0.5.23",
+    "postcss-loader": "^3.0.0",
+    "prettier": "1.16.4",
     "uglifyjs-webpack-plugin": "latest"
-  }
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less)$": "identity-obj-proxy"
+    }
+  },
+  "proxy": "https://localhost:44300"
 }
