--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -9,26 +9,26 @@
     "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "dependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/runtime": "^7.0.0",
+    "@babel/core": "7.0.0",
+    "@babel/plugin-proposal-class-properties": "7.0.0",
+    "@babel/runtime": "7.0.0",
     "@skbkontur/react-icons": "3.1.5",
     "@skbkontur/react-ui": "0.44.2",
     "array-from": "2.1.1",
     "autoprefixer": "9.1.5",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
-    "babel-jest": "^24.5.0",
+    "babel-jest": "24.5.0",
     "babel-loader": "8.0.4",
-    "babel-preset-react-app": "^5.0.3",
+    "babel-preset-react-app": "5.0.3",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "2.4.1",
     "css-loader": "1.0.0",
-    "debounce": "^1.2.0",
+    "debounce": "1.2.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "5.6.1",
-    "eslint-config-react-app": "^3.0.3",
+    "eslint-config-react-app": "3.0.3",
     "eslint-loader": "2.1.1",
     "eslint-plugin-flowtype": "2.50.3",
     "eslint-plugin-import": "2.14.0",
@@ -36,28 +36,28 @@
     "eslint-plugin-react": "7.11.1",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "2.0.0",
-    "file-saver": "^2.0.0-rc.3",
+    "file-saver": "2.0.0-rc.3",
     "fs-extra": "7.0.0",
     "jest": "24.5.0",
     "object-assign": "4.1.1",
     "outdated-browser-rework": "2.5.4",
-    "polyfill-array-includes": "^1.0.0",
+    "polyfill-array-includes": "1.0.0",
     "postcss-flexbugs-fixes": "4.1.0",
     "promise": "8.0.2",
     "promise.prototype.finally": "3.1.0",
     "prop-types": "latest",
     "raf": "3.4.0",
-    "react": "^16.8.3",
-    "react-bootstrap": "^0.32.4",
+    "react": "16.8.3",
+    "react-bootstrap": "0.32.4",
     "react-copy-to-clipboard": "5.0.1",
-    "react-dev-utils": "^6.0.4",
-    "react-dom": "^16.8.3",
+    "react-dev-utils": "6.0.4",
+    "react-dom": "16.8.3",
     "react-helmet": "beta",
     "react-redux": "5.0.7",
-    "react-responsive": "^6.1.1",
+    "react-responsive": "6.1.1",
     "react-router-dom": "4.3.1",
     "react-transition-group": "2.6.0",
-    "react-yandex-metrika": "^2.4.2",
+    "react-yandex-metrika": "2.4.2",
     "redux": "4.0.0",
     "redux-logger": "3.0.6",
     "redux-thunk": "2.3.0",
@@ -65,29 +65,26 @@
     "style-loader": "0.23.0",
     "sw-precache-webpack-plugin": "0.11.5",
     "url-loader": "1.1.1",
-    "url-polyfill": "^1.1.0",
-    "uuid": "^3.3.2",
+    "url-polyfill": "1.1.0",
     "webpack": "4.20.2",
-    "webpack-dev-server": "^3.1.14",
+    "webpack-dev-server": "3.1.14",
     "webpack-manifest-plugin": "2.0.4",
     "whatwg-fetch": "3.0.0"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.1.0",
-    "@storybook/addon-actions": "^4.1.11",
-    "@storybook/addon-viewport": "^4.1.11",
-    "@storybook/addons": "^4.1.11",
+    "@babel/preset-env": "7.1.0",
+    "@storybook/addon-actions": "4.1.11",
+    "@storybook/addon-viewport": "4.1.11",
+    "@storybook/addons": "4.1.11",
     "@storybook/react": "4.1.7",
-    "@types/file-saver": "1.3.0",
-    "@types/react": "^16.4.15",
     "html-webpack-plugin": "next",
-    "identity-obj-proxy": "^3.0.0",
-    "less": "^3.8.1",
-    "less-loader": "^4.1.0",
-    "mini-css-extract-plugin": "^0.4.3",
-    "moment": "^2.22.2",
+    "identity-obj-proxy": "3.0.0",
+    "less": "3.8.1",
+    "less-loader": "4.1.0",
+    "mini-css-extract-plugin": "0.4.3",
+    "moment": "2.22.2",
     "moment-timezone": "0.5.23",
-    "postcss-loader": "^3.0.0",
+    "postcss-loader": "3.0.0",
     "prettier": "1.16.4",
     "uglifyjs-webpack-plugin": "latest"
   },
